Create new "DashboardController", this will be the default hompage.

--- a/src/MinePlus/MainBundle/Resources/config/routing.yml
+++ b/src/MinePlus/MainBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
-mine_plus_main_homepage:
-    pattern:  /hello/{name}
-    defaults: { _controller: MinePlusMainBundle:Default:index }
+dashboard:
+    resource: "@MinePlusMainBundle/Controller/DashboardController.php"
+    type: annotation
