Remove annotations from DashboardController.
There are so many blog articles describing why annotations in php are evil, and I decided to remove annotations entirely from the application.

--- a/src/MinePlus/MainBundle/Resources/config/routing.yml
+++ b/src/MinePlus/MainBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 dashboard:
-    resource: "@MinePlusMainBundle/Controller/DashboardController.php"
-    type: annotation
+    pattern: /
+    defaults: { _controller: MinePlusMainBundle:Dashboard:index }
