Create new SecurityController, associated view, routing and test.

--- a/src/MinePlus/MainBundle/Resources/config/routing.yml
+++ b/src/MinePlus/MainBundle/Resources/config/routing.yml
@@ -1,3 +1,8 @@
 dashboard:
     pattern: /
     defaults: { _controller: MinePlusMainBundle:Dashboard:index }
+login:
+    pattern: /login
+    defaults: { _controller: MinePlusMainBundle:Security:login }
+login_check:
+    pattern: /login/check
