Use default code for security.
I'll customize the login form later ...

--- a/src/MinePlus/MainBundle/Resources/config/routing.yml
+++ b/src/MinePlus/MainBundle/Resources/config/routing.yml
@@ -5,4 +5,4 @@ login:
     pattern: /login
     defaults: { _controller: MinePlusMainBundle:Security:login }
 login_check:
-    pattern: /login/check
+    pattern: /login_check
