--- a/src/MinePlus/MainBundle/Resources/config/routing.yml
+++ b/src/MinePlus/MainBundle/Resources/config/routing.yml
@@ -6,3 +6,5 @@ login:
     defaults: { _controller: MinePlusMainBundle:Security:login }
 login_check:
     pattern: /login_check
+logout:
+    pattern: /logout
