--- a/src/MinePlus/MainBundle/Resources/config/services.yml
+++ b/src/MinePlus/MainBundle/Resources/config/services.yml
@@ -5,3 +5,8 @@ services:
 #    mine_plus_main.example:
 #        class: %mine_plus_main.example.class%
 #        arguments: [@service_id, "plain_value", %parameter%]
+    mineplus.twig.design_configuration_extension:
+        class: MinePlus\MainBundle\Twig\DesignConfigurationExtension
+        arguments: ['@kernel']
+        tags:
+            - { name: twig.extension }
