Improve the DesignConfigurationExtension.

--- a/src/MinePlus/MainBundle/Resources/config/services.yml
+++ b/src/MinePlus/MainBundle/Resources/config/services.yml
@@ -10,3 +10,5 @@ services:
         arguments: ['@kernel']
         tags:
             - { name: twig.extension }
+    design_configuration:
+        alias: mineplus.twig.design_configuration_extension
