Add 'cboden/Ratchet' to dependencies.

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/migrations": "dev-master",
         "doctrine/doctrine-migrations-bundle": "dev-master",
-        "elao/web-profiler-extra-bundle": "dev-master"
+        "elao/web-profiler-extra-bundle": "dev-master",
+        "cboden/Ratchet": "0.2.7"
     },
     "scripts": {
         "post-install-cmd": [
