--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+mine_plus_web_socket:
+    resource: "@MinePlusWebSocketBundle/Resources/config/routing.yml"
+    prefix:   /
+
 mine_plus_main:
     resource: "@MinePlusMainBundle/Resources/config/routing.yml"
     prefix:   /
