--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,21 +1,24 @@
 security:
     encoders:
-        MinePLus\MainBundle\Entity\User:
-            algorithm: sha1
-            encode_as_base64: false
-            iterations: 1
+        FOS\UserBundle\Model\UserInterface: sha512
 
     role_hierarchy:
         ROLE_ADMIN: ROLE_USER
-        ROLE_OWNER: ROLE_ADMIN
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
-        users:
-            entity: { class: MinePlusMainBundle:User, property: username }
+        fos_userbundle:
+            id: fos_user.user_provider.username
     firewalls:
         main:
             pattern:    ^/
-            form_login: ~
-            logout: ~
+            form_login:
+                provider: fos_userbundle
+                csrf_provider: form.csrf_provider
+            logout: true
             anonymous: true
     access_control:
+        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/, role: ROLE_ADMIN }
