--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -15,7 +15,10 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_provider: form.csrf_provider
-            logout: true
+            logout:
+                path: /logout
+                target: /
+                invalidate_session: false
             anonymous: true
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
