Create DoctrineSessionHandler, make handler to use a parameter.
I don't know why the old PdoSessionHandler was so slow, but now we cut the generating time into thirds!

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -18,7 +18,7 @@ framework:
     default_locale:  "%locale%"
     trusted_proxies: ~
     session:
-        handler_id: session.handler.pdo
+        handler_id: %session_handler%
     fragments:       ~
     http_method_override: true
 
@@ -96,7 +96,7 @@ services:
         arguments: ["@pdo", "%pdo.db_options%"]
         
 clank:
-    session_handler: session.handler.pdo
+    session_handler: %session_handler%
     web_socket_server:
         port: %websocket_port%
         host: %websocket_host%
