Fix a bug causing to cast every session id to 0.
The 'session_id' column was an integer, but because the session id may also contain other characters, we need to alter it to an string.
I set the length of the string to 255.

--- a/src/MinePlus/MainBundle/Resources/config/doctrine/Session.orm.yml
+++ b/src/MinePlus/MainBundle/Resources/config/doctrine/Session.orm.yml
@@ -8,7 +8,8 @@ MinePlus\MainBundle\Entity\Session:
             generator:
                 strategy: AUTO
         sessionId:
-            type: integer
+            type: string
+            length: 255
             column: session_id
         data:
             type: text
