--- a/src/MinePlus/MainBundle/Resources/config/services.yml
+++ b/src/MinePlus/MainBundle/Resources/config/services.yml
@@ -1,17 +1,9 @@
-parameters:
-#    mine_plus_main.example.class: MinePlus\MainBundle\Example
-
 services:
-#    mine_plus_main.example:
-#        class: %mine_plus_main.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
-    mineplus.twig.design_configuration_extension:
-        class: MinePlus\MainBundle\Twig\DesignConfigurationExtension
-        arguments: ['@kernel']
+    mineplus.twig.config_extension:
+        class: MinePlus\MainBundle\Twig\ConfigExtension
+        arguments: ['@doctrine']
         tags:
             - { name: twig.extension }
-    design_configuration:
-        alias: mineplus.twig.design_configuration_extension
         
     mineplus.twig.avatar_extension:
         class: MinePlus\MainBundle\Twig\AvatarExtension
