Save cached avatars directly to web/ directory.
Now, when a avatar is already cached, the browser will get the image directly, without a complete 'symfony2 request'.

--- a/src/MinePlus/MainBundle/Resources/config/routing.yml
+++ b/src/MinePlus/MainBundle/Resources/config/routing.yml
@@ -3,8 +3,8 @@ dashboard:
     defaults: { _controller: MinePlusMainBundle:Dashboard:index }
 
 mineplus_main_avatar:
-    pattern: /avatar/{username}/{size}
-    defaults: { _controller: MinePlusMainBundle:Image:avatar, size: 128 }
+    pattern: /avatar/{username}/{size}.{_format}
+    defaults: { _controller: MinePlusMainBundle:Image:avatar }
 
 list:
     pattern: /players/
