Disable dublicated profiler section.

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -24,8 +24,8 @@ assetic:
     use_controller: true
 web_profiler_extra:
     routing:
-        enabled: true
-        display_in_wdt: true
+        enabled: false
+        display_in_wdt: false
     container:
         enabled: true
         display_in_wdt: true
