Fix incorret capitalization in session migrations.

--- a/src/MinePlus/MainBundle/Resources/config/doctrine/Session.orm.yml
+++ b/src/MinePlus/MainBundle/Resources/config/doctrine/Session.orm.yml
@@ -1,6 +1,6 @@
 MinePlus\MainBundle\Entity\Session:
     type: entity
-    table: null
+    table: session
     fields:
         id:
             type: integer
