Show wall posts.

--- a/src/MinePlus/MainBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/MinePlus/MainBundle/Resources/config/doctrine/User.orm.yml
@@ -7,3 +7,7 @@ MinePlus\MainBundle\Entity\User:
             id: true
             generator:
                 strategy: AUTO
+    oneToOne:
+        wall:
+            targetEntity: wall
+            mappedBy: user
