Create infrastructure for admin settings.
Note: Also fixed an issue with the user entity.

--- a/src/MinePlus/MainBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/MinePlus/MainBundle/Resources/config/doctrine/User.orm.yml
@@ -9,5 +9,5 @@ MinePlus\MainBundle\Entity\User:
                 strategy: AUTO
     oneToOne:
         wall:
-            targetEntity: wall
+            targetEntity: Wall
             mappedBy: user
