--- a/src/MinePlus/MainBundle/Resources/config/routing.yml
+++ b/src/MinePlus/MainBundle/Resources/config/routing.yml
@@ -17,3 +17,7 @@ mineplus_main_player_show:
 mineplus_main_admin_index:
     pattern: /admin/
     defaults: { _controller: MinePlusMainBundle:Admin:index }
+
+mineplus_main_admin_design:
+    pattern: /admin/design
+    defaults: { _controller: MinePlusMainBundle:Admin:design }
