--- a/src/MinePlus/MainBundle/Resources/config/services.yml
+++ b/src/MinePlus/MainBundle/Resources/config/services.yml
@@ -24,6 +24,12 @@ services:
         class: MinePlus\MainBundle\EventListener\NavbarListener
         tags:
             - { name: kernel.event_listener, event: navbar.build, method: onNavbarBuild }
+            
+    mineplus.listener.config_listener:
+        class: MinePlus\MainBundle\EventListener\ConfigListener
+        tags:
+            - { name: kernel.event_listener, event: config.build, method: onConfigEditorBuild }
+        arguments: ['@doctrine.orm.entity_manager']
 
     # WebSocket Topics
     mineplus.main.topic.chat:
