--- a/src/MinePlus/MainBundle/Resources/config/services.yml
+++ b/src/MinePlus/MainBundle/Resources/config/services.yml
@@ -11,17 +11,11 @@ services:
         arguments: ['@router']
         tags:
             - { name: twig.extension }
-            
-    mineplus.twig.navbar_extension:
-        class: MinePlus\MainBundle\Twig\NavbarExtension
-        calls:
-            - [setDispatcher, ['@event_dispatcher']]
-        tags:
-            - { name: twig.extension }
 
     # Event Listeners
     mineplus.listener.navbar_listener:
         class: MinePlus\MainBundle\EventListener\NavbarListener
+        arguments: ['@router', '@translator']
         tags:
             - { name: kernel.event_listener, event: navbar.build, method: onNavbarBuild }
 
