--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "elao/web-profiler-extra-bundle": "dev-master",
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "jdare/clank-bundle": "dev-master",
-        "nesbot/carbon": "1.*"
+        "nesbot/carbon": "1.*",
+        "sonata-project/admin-bundle": "dev-master",
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
