Build menu with KnpMenuBundle instead of own MinePlusDesignBundle.
Note I've not implemented the chat indicator in the navbar anymore, cause I am going to rewrite the chat system.

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "jdare/clank-bundle": "dev-master",
         "nesbot/carbon": "1.*",
         "sonata-project/admin-bundle": "dev-master",
-        "sonata-project/doctrine-orm-admin-bundle": "dev-master"
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+        "knplabs/knp-menu-bundle": "~1.1"
     },
     "scripts": {
         "post-install-cmd": [
