--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "sonata-project/doctrine-orm-admin-bundle": "dev-master",
         "knplabs/knp-menu-bundle": "~1.1",
         "knplabs/knp-time-bundle": "dev-master",
-        "mockery/mockery": "~0.8.0"
+        "mockery/mockery": "~0.8.0",
+        "friendsofsymfony/message-bundle": "~1.2.0"
     },
     "scripts": {
         "post-install-cmd": [
