--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -33,3 +33,7 @@ _sonata_admin:
     resource: .
     type: sonata_admin
     prefix: /admin
+    
+fos_message:
+    resource: "@FOSMessageBundle/Resources/config/routing.xml"
+    prefix: /message
