translate routing config to xml

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,7 +3,7 @@ mine_plus_minecraft:
     prefix:   /
 
 mine_plus_main:
-    resource: "@MinePlusMainBundle/Resources/config/routing.yml"
+    resource: "@MinePlusMainBundle/Resources/config/routing.xml"
     prefix:   /
 
 fos_user_security:
