use less for custom styles

--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "knplabs/knp-time-bundle": "dev-master",
         "mockery/mockery": "~0.8.0",
         "friendsofsymfony/message-bundle": "~1.2.0",
-        "twbs/bootstrap": "~3.0.0"
+        "twbs/bootstrap": "~3.0.0",
+        "leafo/lessphp": "~0.4.0"
     },
     "scripts": {
         "post-install-cmd": [
