--- a/app/config/assets.yml
+++ b/app/config/assets.yml
@@ -1,4 +1,8 @@
 assetic:
+    filters:
+        cssrewrite: ~
+        lessphp:
+            apply_to: "\.less$"
     assets:
         bootstrap_css:
             inputs:
