--- a/app/config/assets.yml
+++ b/app/config/assets.yml
@@ -4,12 +4,17 @@ assetic:
         lessphp:
             apply_to: "\.less$"
     assets:
+        # CSS Assets
         bootstrap_css:
             inputs:
                 - '%kernel.root_dir%/../vendor/twbs/bootstrap/dist/css/bootstrap.min.css'
-        bootstrap_js:
-            inputs:
-                - '%kernel.root_dir%/../vendor/twbs/bootstrap/dist/js/bootstrap.min.js'
         bootstrap_docs_css:
             inputs:
                 - '%kernel.root_dir%/../vendor/twbs/bootstrap/docs-assets/css/docs.css'
+        # JavaScript Assets
+        bootstrap_js:
+            inputs:
+                - '%kernel.root_dir%/../vendor/twbs/bootstrap/dist/js/bootstrap.min.js'
+        jquery:
+            inputs:
+                - '%kernel.root_dir%/../vendor/jquery/jquery/jquery-2.0.3.min.js'
