--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -115,23 +115,10 @@ clank:
             name: chat
             service: mineplus.main.topic.chat
             
-sonata_admin:
-    title: MinePlus
-    security:
-        handler: sonata.admin.security.handler.role
-        acl_user_manager: fos_user.user_manager
-    options:
-        html5_validate: true
-        confirm_exit: true
-    persist_filters: false
-
-sonata_block:
-    default_contexts: [cms]
-    blocks:
-        sonata.admin.block.admin_list:
-            contexts: [admin]
-            
 fos_message:
     db_driver: orm
     thread_class: MinePlus\MainBundle\Entity\Thread
     message_class: MinePlus\MainBundle\Entity\Message
+    
+mopa_bootstrap:
+    menu: ~
